// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options:linkage 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <form
      class="amis-Form amis-Form--normal"
      novalidate=""
    >
      <input
        style="display: none;"
        type="submit"
      />
      <div
        class="amis-Form-item amis-Form-item--normal"
        data-amis-name="a"
        data-role="form-item"
      >
        <label
          class="amis-Form-label text-muted"
        >
          <span>
            <span
              class="amis-TplField fr-view"
            >
              <span>
                选项x
              </span>
            </span>
          </span>
        </label>
        <div
          class="amis-ListControl amis-Form-control is-inline"
        >
          <div
            class="amis-ListControl-items"
          >
            <div
              class="amis-ListControl-item"
            >
              <div
                class="amis-ListControl-itemLabel"
              >
                选项1
              </div>
            </div>
            <div
              class="amis-ListControl-item"
            >
              <div
                class="amis-ListControl-itemLabel"
              >
                选项2
              </div>
            </div>
            <div
              class="amis-ListControl-item"
            >
              <div
                class="amis-ListControl-itemLabel"
              >
                选项3
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="amis-Form-item amis-Form-item--normal"
        data-amis-name="b"
        data-role="form-item"
      >
        <label
          class="amis-Form-label text-muted"
        >
          <span>
            <span
              class="amis-TplField fr-view"
            >
              <span>
                选项y
              </span>
            </span>
          </span>
        </label>
        <div
          class="amis-RadiosControl amis-Form-control is-inline is-thin"
        >
          <label
            class="amis-Checkbox amis-Checkbox--radio--default"
            data-role="checkbox"
          >
            <input
              type="radio"
            />
            <i>
              <div
                class="radio-icon icon"
              />
            </i>
            <span
              class="text-muted"
            >
              选项a
            </span>
          </label>
          <label
            class="amis-Checkbox amis-Checkbox--radio--default"
            data-role="checkbox"
          >
            <input
              type="radio"
            />
            <i>
              <div
                class="radio-icon icon"
              />
            </i>
            <span
              class="text-muted"
            >
              选项b
            </span>
          </label>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`options:linkage 2`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <form
      class="amis-Form amis-Form--normal"
      novalidate=""
    >
      <input
        style="display: none;"
        type="submit"
      />
      <div
        class="amis-Form-item amis-Form-item--normal"
        data-amis-name="a"
        data-role="form-item"
      >
        <label
          class="amis-Form-label text-muted"
        >
          <span>
            <span
              class="amis-TplField fr-view"
            >
              <span>
                选项x
              </span>
            </span>
          </span>
        </label>
        <div
          class="amis-ListControl amis-Form-control is-inline"
        >
          <div
            class="amis-ListControl-items"
          >
            <div
              class="amis-ListControl-item is-active"
            >
              <div
                class="amis-ListControl-itemLabel"
              >
                选项1
              </div>
            </div>
            <div
              class="amis-ListControl-item"
            >
              <div
                class="amis-ListControl-itemLabel"
              >
                选项2
              </div>
            </div>
            <div
              class="amis-ListControl-item"
            >
              <div
                class="amis-ListControl-itemLabel"
              >
                选项3
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="amis-Form-item amis-Form-item--normal"
        data-amis-name="b"
        data-role="form-item"
      >
        <label
          class="amis-Form-label text-muted"
        >
          <span>
            <span
              class="amis-TplField fr-view"
            >
              <span>
                选项y
              </span>
            </span>
          </span>
        </label>
        <div
          class="amis-RadiosControl amis-Form-control is-inline is-thin"
        >
          <label
            class="amis-Checkbox amis-Checkbox--radio--default disabled amis-Checkbox--radio--default--disabled--unchecked"
            data-role="checkbox"
          >
            <input
              disabled=""
              type="radio"
            />
            <i>
              <div
                class="radio-icon icon"
              />
            </i>
            <span
              class="text-muted"
            >
              选项a
            </span>
          </label>
          <label
            class="amis-Checkbox amis-Checkbox--radio--default"
            data-role="checkbox"
          >
            <input
              type="radio"
            />
            <i>
              <div
                class="radio-icon icon"
              />
            </i>
            <span
              class="text-muted"
            >
              选项b
            </span>
          </label>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`options:linkage 3`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <form
      class="amis-Form amis-Form--normal"
      novalidate=""
    >
      <input
        style="display: none;"
        type="submit"
      />
      <div
        class="amis-Form-item amis-Form-item--normal"
        data-amis-name="a"
        data-role="form-item"
      >
        <label
          class="amis-Form-label text-muted"
        >
          <span>
            <span
              class="amis-TplField fr-view"
            >
              <span>
                选项x
              </span>
            </span>
          </span>
        </label>
        <div
          class="amis-ListControl amis-Form-control is-inline"
        >
          <div
            class="amis-ListControl-items"
          >
            <div
              class="amis-ListControl-item"
            >
              <div
                class="amis-ListControl-itemLabel"
              >
                选项1
              </div>
            </div>
            <div
              class="amis-ListControl-item is-active"
            >
              <div
                class="amis-ListControl-itemLabel"
              >
                选项2
              </div>
            </div>
            <div
              class="amis-ListControl-item"
            >
              <div
                class="amis-ListControl-itemLabel"
              >
                选项3
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="amis-Form-item amis-Form-item--normal"
        data-amis-name="b"
        data-role="form-item"
      >
        <label
          class="amis-Form-label text-muted"
        >
          <span>
            <span
              class="amis-TplField fr-view"
            >
              <span>
                选项y
              </span>
            </span>
          </span>
        </label>
        <div
          class="amis-RadiosControl amis-Form-control is-inline is-thin"
        >
          <label
            class="amis-Checkbox amis-Checkbox--radio--default"
            data-role="checkbox"
          >
            <input
              type="radio"
            />
            <i>
              <div
                class="radio-icon icon"
              />
            </i>
            <span
              class="text-muted"
            >
              选项a
            </span>
          </label>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`options:linkage 4`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <form
      class="amis-Form amis-Form--normal"
      novalidate=""
    >
      <input
        style="display: none;"
        type="submit"
      />
      <div
        class="amis-Form-item amis-Form-item--normal"
        data-amis-name="a"
        data-role="form-item"
      >
        <label
          class="amis-Form-label text-muted"
        >
          <span>
            <span
              class="amis-TplField fr-view"
            >
              <span>
                选项x
              </span>
            </span>
          </span>
        </label>
        <div
          class="amis-ListControl amis-Form-control is-inline"
        >
          <div
            class="amis-ListControl-items"
          >
            <div
              class="amis-ListControl-item"
            >
              <div
                class="amis-ListControl-itemLabel"
              >
                选项1
              </div>
            </div>
            <div
              class="amis-ListControl-item"
            >
              <div
                class="amis-ListControl-itemLabel"
              >
                选项2
              </div>
            </div>
            <div
              class="amis-ListControl-item is-active"
            >
              <div
                class="amis-ListControl-itemLabel"
              >
                选项3
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="amis-Form-item amis-Form-item--normal"
        data-amis-name="b"
        data-role="form-item"
      >
        <label
          class="amis-Form-label text-muted"
        >
          <span>
            <span
              class="amis-TplField fr-view"
            >
              <span>
                选项y
              </span>
            </span>
          </span>
        </label>
        <div
          class="amis-RadiosControl amis-Form-control is-inline is-thin"
        >
          <label
            class="amis-Checkbox amis-Checkbox--radio--default"
            data-role="checkbox"
          >
            <input
              type="radio"
            />
            <i>
              <div
                class="radio-icon icon"
              />
            </i>
            <span
              class="text-muted"
            >
              选项a
            </span>
          </label>
          <label
            class="amis-Checkbox amis-Checkbox--radio--default"
            data-role="checkbox"
          >
            <input
              type="radio"
            />
            <i>
              <div
                class="radio-icon icon"
              />
            </i>
            <span
              class="text-muted"
            >
              选项b
            </span>
          </label>
          <label
            class="amis-Checkbox amis-Checkbox--radio--default"
            data-role="checkbox"
          >
            <input
              type="radio"
            />
            <i>
              <div
                class="radio-icon icon"
              />
            </i>
            <span
              class="text-muted"
            >
              选项c
            </span>
          </label>
        </div>
      </div>
    </form>
  </div>
</div>
`;
